--- a/hello-glsl.css
+++ b/hello-glsl.css
@@ -3,8 +3,8 @@ body {
 }
 canvas {
   display : block;
-  width : 280px;
-  height : 210px;
+  width : 100%;
+  height : 100%px;
   margin : auto;
   padding : 0;
   border : none;
