--- a/hello-glsl.css
+++ b/hello-glsl.css
@@ -4,7 +4,7 @@ body {
 canvas {
   display : block;
   width : 100%;
-  height : 100%px;
+  height : 100%;
   margin : auto;
   padding : 0;
   border : none;
