--- a/canvas-size-and-webgl.css
+++ b/canvas-size-and-webgl.css
@@ -4,7 +4,7 @@ body {
 canvas {
   display : inline-block;
   width : 100%px;
-  height : 80px;
+  height : 100%px;
   margin : auto;
   padding : 0;
   border : none;
